[gd_scene load_steps=7 format=2]

[ext_resource path="res://items/key.png" type="Texture" id=1]
[ext_resource path="res://light.png" type="Texture" id=2]
[ext_resource path="res://items/Key.gd" type="Script" id=3]
[ext_resource path="res://items/win.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.682353 )
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[node name="Key" type="Area2D"]
pause_mode = 2
z_index = 30
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
color = Color( 1, 0.772549, 0, 1 )
energy = 1.5

[node name="WinScreen" type="CanvasLayer" parent="."]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="Panel" type="PanelContainer" parent="WinScreen"]
visible = false
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.25
anchor_bottom = 0.25
margin_left = -161.0
margin_top = -71.0
margin_right = 161.0
margin_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="WinScreen/Panel"]
margin_right = 322.0
margin_bottom = 142.0

[node name="WinText" type="Label" parent="WinScreen/Panel/Rows"]
margin_right = 322.0
margin_bottom = 54.0
text = "You found your keys!
Thanks for playing!
"
align = 1
valign = 1

[node name="Score" type="Label" parent="WinScreen/Panel/Rows"]
margin_top = 58.0
margin_right = 322.0
margin_bottom = 74.0
text = "Score: 100"
valign = 1

[node name="Time" type="Label" parent="WinScreen/Panel/Rows"]
margin_top = 78.0
margin_right = 322.0
margin_bottom = 94.0
text = "Time left: 100"
valign = 1

[node name="Total" type="Label" parent="WinScreen/Panel/Rows"]
margin_top = 98.0
margin_right = 322.0
margin_bottom = 114.0
text = "TOTAL: 100"
valign = 1

[node name="Button" type="ToolButton" parent="WinScreen/Panel/Rows"]
margin_top = 118.0
margin_right = 322.0
margin_bottom = 142.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "PRESS ANY KEY TO RESTART"

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.6
[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
[connection signal="pressed" from="WinScreen/Panel/Rows/Button" to="." method="_on_Button_pressed"]
